--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>cPtdsHealing.org</title>
-        <!-- BOOTSTRAP V 5.3 -->
+<!-- BOOTSTRAP V 5.3 --><!-- BOOTSTRAP V 5.3 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-        <!-- CUSTOM CSS -->
+<!-- GOOGLE FONT - JOSEFIN SANS -- 100 TO 700 -->
+        <!-- FONT FAMILY RULE: font-family: 'Josefin Sans', sans-serif; -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+<!-- CUSTOM CSS --><!-- CUSTOM CSS -->
         <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
-        <h1>Hello, world!</h1>
+
+<!--=====================-->
+<!-- NAVBAR --><!--NAVBAR-->
+<!--=====================-->
+
+
+
 
         <!-- BOOTSTRAP V 5.3 JS/POPPER BUNDLE DO NOT DELETE -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
