--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid mx-5">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#"><img src="./images/logos/logo-123-60.png" alt="Visit the homepage of C P T S D healing dot org"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
