--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <div class="d-flex">
+                                <img src="./images/supportIcons/read-80-80.png" width="35" height="35" alt="This icon means read to learn more.">
+                                <img class="ms-1" src="./images/supportIcons/watch-80-80.png" width="35" height="35" alt="This icon means watch to learn more.">
+                                <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 learn.
-                            </a>
+                                </a>
+                            </div>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -40,9 +44,12 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <div class="d-flex">
+                                <img class="ms-2" src="./images/supportIcons/support-80-80.png" width="35" height="35" alt="This icon means read to learn more.">
+                                <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 find support.
-                            </a>
+                                </a>
+                            </div>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -51,9 +58,12 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <div class="d-flex">
+                                <img class="ms-2" src="./images/supportIcons/contact-80-80.png" width="35" height="35" alt="This icon means read to learn more.">
+                                <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 contact us and more.
-                            </a>
+                                </a>
+                            </div>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
