Navbar link order shuffled.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                         </li>
                         <li class="nav-item dropdown">
                             <div class="d-flex">
-                                <img class="ms-2" src="./images/supportIcons/support-80-80.png" width="35" height="35" alt="This icon means read to learn more.">
+                                <img class="ms-2" src="./images/supportIcons/contact-80-80.png" width="35" height="35" alt="This icon means read to learn more.">
                                 <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                find support.
+                                contact us & more.
                                 </a>
                             </div>
                             <ul class="dropdown-menu">
@@ -59,9 +59,9 @@
                         </li>
                         <li class="nav-item dropdown">
                             <div class="d-flex">
-                                <img class="ms-2" src="./images/supportIcons/contact-80-80.png" width="35" height="35" alt="This icon means read to learn more.">
+                                <img class="ms-2" src="./images/supportIcons/support-80-80.png" width="35" height="35" alt="This icon means read to learn more.">
                                 <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                contact us and more.
+                                find support.
                                 </a>
                             </div>
                             <ul class="dropdown-menu">
