Updated search bar.  Using this as a placeholder.  After learning more programming, return to this to [1j] animate the search bar so that it slides left to reveal the search bar, and [2] program the search bar to enable it to search  this website.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <div class="d-flex align-items-center pt-1 me-2 searchHereMain">Search This Site ►</div> 
+                        <img src="./images/search/search-icon-80-80.png" width="60" height="60" alt="Touch here to open the search bar.">
+                        <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                        <button class="btn btn-outline-success" type="submit">Search</button>-->
                     </form>
                 </div>
             </div>
