Icons added back into Navbar and some sizing adjustments were made.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 pt-lg-1">
+                        <img src="./images/supportIcons/read-80-80.png" height="40" width="40" alt="Read to learn more icon of person reading book.">
+                        <img class="ms-1" src="./images/supportIcons/watch-80-80.png" height="40" width="40" alt="Watch to learn more video icon.">
                         <li class="nav-item dropdown">
-                            <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link navLinkMain dropdown-toggle me-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 learn.
                             </a>
                             <ul class="dropdown-menu">
@@ -39,8 +41,9 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
+                        <img class="ms-1" src="./images/supportIcons/contact-80-80.png" height="40" width="40" alt="Contact us and more email letter icon.">
                         <li class="nav-item dropdown">
-                            <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link navLinkMain dropdown-toggle me-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 contact us & more.
                             </a>
                             <ul class="dropdown-menu">
@@ -50,6 +53,7 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
+                        <img class="ms-1" src="./images/supportIcons/support-80-80.png" height="40" width="40" alt="Get support with C P T S D helping hands icon.">
                         <li class="nav-item dropdown">
                             <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 find support.
@@ -64,7 +68,7 @@
                     </ul>
                     <form class="d-flex" role="search">
                         <div class="d-flex align-items-center pt-1 me-2 searchHereMain">Search This Site ►</div> 
-                        <img src="./images/search/search-icon-80-80.png" width="60" height="60" alt="Touch here to open the search bar.">
+                        <img src="./images/search/search-icon-80-80.png" width="50" height="50" alt="Touch here to open the search bar.">
                         <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                         <button class="btn btn-outline-success" type="submit">Search</button>-->
                     </form>
