Information about the styling clarified through comments.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link navLinkMain dropdown-toggle me-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 learn.
                             </a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu dropdownMain dropdownLearn">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><hr class="dropdown-divider" /></li>
@@ -46,7 +46,7 @@
                             <a class="nav-link navLinkMain dropdown-toggle me-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 contact us & more.
                             </a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu dropdownMain dropdownContact">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><hr class="dropdown-divider" /></li>
@@ -58,7 +58,7 @@
                             <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 find support.
                             </a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu dropdownMain dropdownSupport">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><hr class="dropdown-divider" /></li>
@@ -67,8 +67,8 @@
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <div class="d-flex align-items-center pt-1 me-2 searchHereMain">Search This Site ►</div> 
-                        <img src="./images/search/search-icon-80-80.png" width="50" height="50" alt="Touch here to open the search bar.">
+                        <div class="d-flex align-items-center pt-1 me-2 searchHereMain">Search ►</div> 
+                        <img src="./images/search/search-icon-80-80.png" width="40" height="40" alt="Touch here to open the search bar.">
                         <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                         <button class="btn btn-outline-success" type="submit">Search</button>-->
                     </form>
