Fleshed out the drop down menus and hid navbar icons in xs to md views to clean up appearance.

--- a/index.html
+++ b/index.html
@@ -28,41 +28,62 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 pt-lg-1">
-                        <img src="./images/supportIcons/read-80-80.png" height="40" width="40" alt="Read to learn more icon of person reading book.">
-                        <img class="ms-1" src="./images/supportIcons/watch-80-80.png" height="40" width="40" alt="Watch to learn more video icon.">
+                        <img class="d-none d-lg-block" src="./images/supportIcons/read-80-80.png" height="40" width="40" alt="Read to learn more icon of person reading book.">
+                        <img class="ms-1 d-none d-lg-block" src="./images/supportIcons/watch-80-80.png" height="40" width="40" alt="Watch to learn more video icon.">
                         <li class="nav-item dropdown">
                             <a class="nav-link navLinkMain dropdown-toggle me-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 learn.
                             </a>
                             <ul class="dropdown-menu dropdownMain dropdownLearn">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">🟢 OUR NEWEST CONTENT!</a></li>
+                                <li><a class="dropdown-item" href="#">🟢 New to CPTSD? Start here.</a></li>
+                                <li><a class="dropdown-item" href="#">🟢 Child Abuse & Bullying</a></li>  
+                                <li><a class="dropdown-item" href="#">🟢 Coexisting Disorders</a></li>  
+                                <li><a class="dropdown-item" href="#">🟢 Children & Trauma</a></li>  
+                                <li><a class="dropdown-item" href="#">🟢 In the Workplace</a></li>  
+                                <li><a class="dropdown-item" href="#">🟢 In the News</a></li> 
+                                <li><a class="dropdown-item" href="#">🟢 Parenting</a></li>  
+                                <li><a class="dropdown-item" href="#">🟢 Treatment</a></li>  
+                                <li><a class="dropdown-item" href="#">🟢 Vulnerable Populations</a></li>
+                                <li><a class="dropdown-item" href="#">🟢 Self-Assessments</a></li>   
+                                <li><a class="dropdown-item" href="#">🟢 Signs & Symptoms</a></li>  
+                                <li><a class="dropdown-item" href="#">🟢 Strategies for Living Well</a></li>  
+                                <li><a class="dropdown-item" href="#">🟢 WHO's ICD vs APA's DSM-5</a></li> 
+                                <!--<li><hr class="dropdown-divider" /></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>-->
                             </ul>
                         </li>
-                        <img class="ms-1" src="./images/supportIcons/contact-80-80.png" height="40" width="40" alt="Contact us and more email letter icon.">
+                        <img class="ms-1 d-none d-lg-block" src="./images/supportIcons/contact-80-80.png" height="40" width="40" alt="Contact us and more email letter icon.">
                         <li class="nav-item dropdown">
                             <a class="nav-link navLinkMain dropdown-toggle me-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 contact us & more.
                             </a>
                             <ul class="dropdown-menu dropdownMain dropdownContact">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">🟡 About Us</a></li>
+                                <li><a class="dropdown-item" href="#">🟡 Connect with us on social media!</a></li>
+                                <li><a class="dropdown-item" href="#">🟡 Visit our YouTube channel!</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">🟡 Join our newsletter!</a></li>
+                                <li><a class="dropdown-item" href="#">🟡 Send us a message.</a></li>
+                                <li><a class="dropdown-item" href="#">🟡 Privacy Policy</a></li>
+                                <li><a class="dropdown-item" href="#">🟡 Terms of Service</a></li>
                             </ul>
                         </li>
-                        <img class="ms-1" src="./images/supportIcons/support-80-80.png" height="40" width="40" alt="Get support with C P T S D helping hands icon.">
+                        <img class="ms-1 d-none d-lg-block" src="./images/supportIcons/support-80-80.png" height="40" width="40" alt="Get support with C P T S D helping hands icon.">
                         <li class="nav-item dropdown">
                             <a class="nav-link navLinkMain dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 find support.
                             </a>
-                            <ul class="dropdown-menu dropdownMain dropdownSupport">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <ul class="dropdown-menu dropdownMain dropdownSupport  dropdown-menu-lg-end">
+                                <li><a class="dropdown-item" href="#">🔴 Children's Treatment Resources</a></li>
+                                <li><a class="dropdown-item" href="#">🔴 Disability Support Directory</a></li>
+                                <li><a class="dropdown-item" href="#">🔴 Treatment Directory</a></li>    
+                                <li><a class="dropdown-item" href="#">🔴 Medical Marijuana Directory</a></li>
+                                <li><a class="dropdown-item" href="#">🔴 Self-Help Resources</a></li>
+                                <li><a class="dropdown-item" href="#">🔴 Suicide Resources</a></li>
+                                <li><a class="dropdown-item" href="#">🔴 Workplace Resources</a></li>    
+                                <!--<li><hr class="dropdown-divider" /></li>
+                                <li><a class="dropdown-item" href="#">🔴 Something else here</a></li>-->
                             </ul>
                         </li>
                     </ul>
